# bookdb-tui

./: .pre-commit-config.yaml  LICENCE  pyproject.toml  requirements-dev.txt  requirements.txt
