[project]
name = "bookdb-tui"
description = "A TUI for interacting with my Books API"
version = "1.0.0"
requires-python = ">= 3.14"
authors = [
    { name = "MajorTanya", email = "github@majortanya.eu" }
]

dependencies = [
    "textual",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "textual-dev",
]

[tool.black]
target-version = ['py314']

[tool.mypy]
strict = true
